--- a/ex4.html
+++ b/ex4.html
@@ -3,6 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <title>Tablas</title>
+    <style>table,
+    td,
+    th  {
+        border: 1px solid black;
+    }
+    </style>
 </head>
 <body>
     <table>
